Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Vivian技术博客.GitHub.io : vivian技术博客">
+    <meta name="description" content="Vivian技术博客 : audio driver">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Vivian技术博客.GitHub.io</title>
+    <title>Vivian技术博客</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/vivianliang722">View on GitHub</a>
 
-          <h1 id="project_title">Vivian技术博客.GitHub.io</h1>
-          <h2 id="project_tagline">vivian技术博客</h2>
+          <h1 id="project_title">Vivian技术博客</h1>
+          <h2 id="project_tagline">audio driver</h2>
 
         </header>
     </div>
@@ -30,14 +30,7 @@
         <h1>
 <a id="vivianliang722githubio" class="anchor" href="#vivianliang722githubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>vivianliang722.github.io</h1>
 
-<p>audio driver
-Designer Templates</p>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<p>Rather Drive Stick?</p>
-
-<p>If you prefer to not use the automatic generator, push a branch named gh-pages to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>audio driver</p>
       </section>
     </div>
 
